--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
 	</head>
 	<body>
 	<script src="/js/jquery-2.1.4.min.js"/></script>	
-	<script src="/js/socket.io-1.7.2.min.js"/></script>	
-	<script type="text/javascript">
-		var socket = io();
-	</script>
+	<script src="/js/socket.io-1.7.2.min.js"/></script>
+	<script src="/js/app.js"/></script>	
 	</body>
 </html>
