--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
 		</title>
 	</head>
 	<body>
+	<form id="message-form">
+		<input type="text" name="message"/>
+		<input type="submit">
+	</form>
 	<script src="/js/jquery-2.1.4.min.js"/></script>	
 	<script src="/js/socket.io-1.7.2.min.js"/></script>
+	<script src="/js/moment.min.js"/></script>
 	<script src="/js/app.js"/></script>	
 	</body>
 </html>
