Added first HTML containers for Chat interface

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 		</title>
 	</head>
 	<body>
+	<div class="messages" style="font-family:courier;font-size:18px;">
+	<!--Messages end up here-->
+		
+	</div>
 	<form id="message-form">
 		<input type="text" name="message"/>
 		<input type="submit">
