--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,11 @@
 		</title>
 	</head>
 	<body>
-	<h2 id="room-title" style="font-family:courier;font-size:22px;font-weight:bold;"></h2>
-	<div class="messages" style="font-family:courier;font-size:18px;">
-	<!--Messages end up here-->
-		
-	</div>
-	<form id="message-form">
-		<input type="text" name="message"/>
-		<input type="submit">
+	<h1>JOIN CHAT:</h1>
+	<form action="/chat.html">
+		<label>Display Name: </label>
+		<input type="text" name="name"/>
+		<input type="submit" value="Join chat!"/>
 	</form>
-	<script src="/js/jquery-2.1.4.min.js"/></script>	
-	<script src="/js/socket.io-1.7.2.min.js"/></script>
-	<script src="/js/moment.min.js"/></script>
-	<script src="/js/queryparams.js"/></script>	
-	<script src="/js/app.js"/></script>	
 	</body>
 </html>
